Fixed too much space at hamburger button

--- a/src/app/ui-components/side-menu/side-menu.component.scss
+++ b/src/app/ui-components/side-menu/side-menu.component.scss
@@ -62,7 +62,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0px rem($spacing-medium);
+        padding-right: rem($spacing-medium);
     }
     
     &__heading-text {
